fix menu on mobile

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-default {
-    background: rgba(0, 0, 0, .4);
+    background: rgba(0, 0, 0, .5);
     border-color: transparent;
 }
 
@@ -14,6 +14,10 @@
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: transparent;
+}
+.navbar-default .navbar-collapse {
+    position: relative;
+    z-index: 10;
 }
 
 
