--- a/css/main.scss
+++ b/css/main.scss
@@ -44,7 +44,7 @@ pre {
 	left: 0;
 	text-align: center;
 	color: #E7E7E7;
-	z-index: 10;
+	z-index: 2;
 }
 
 .page-title-in-header {
